# ghscraper

./: README.md  ghscraper.py  grepr.sh  massclone.py  names.txt  pyproject.toml
ghscraper_marufromhell/: ghscraper.py
